# aip-italy-searcher

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  SLICE_FINDINGS.md
scripts/: calibrate_thresholds.py
src/aip_search/: answer.py  cli.py  config.py  guards.py  index.py  ingest.py  models.py  parse.py  retrieve.py  roles.py  router.py  streamlit_app.py  synth.py
